--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 PORT = 3000
-MONGO_URL=mongodb+srv://<username>:<password>@cluster0.xxxxx.mongodb.net/shazam?retryWrites=true&w=majority
-JWT_SECRET=some_long_random_secret_here
+MONGO_URL=mongodb+srv://lakshittalreja_db_user:uTkr7AygkMn1h3rw>@shazaminverse.v5mgb5z.mongodb.net/?appName=ShazamInverse
+JWT_SECRET=taylorswiftusesautotune
 GOOGLE_CLIENT_ID=494196296546-6r9onsvgvo1idjvnro0en1i3r5499d95.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 BASE_URL=http://localhost:3000
